--------------------
v0.1.0   2015-01-XX
--------------------
Changes:
* Added support for multiple accounts (Thanks to press9 media solutions berlin - press9.de)