@@ -9,6 +9,7 @@
 
 = form_for @options, :verify, :class => "form-horizontal" do |f|
   = f.file_browser_field :package, :data => { :title => "Package" }
+  = f.check_box :batch, :label => "Batch verify?"
   = f.check_box :verify_assets, :value => "true", :uncheck_value => "false", :label => "Verify assets", :help_block => ""
   = f.select_priority
   = f.select_account account_options(@accounts)
