@@ -3,6 +3,7 @@ class UploadJob < TransporterJob
   def typecast_options
     options[:rate]   = options[:rate].to_i if options[:rate] =~ /\A\d+\z/
     options[:delete] = to_bool(options[:delete])
+    options[:batch]  = to_bool(options[:batch])
     true
   end
 
