@@ -1,5 +1,10 @@
 --------------------
 v0.1.0   2015-01-XX
 --------------------
+Bug fixes:
+* Fix serialize bug when attempting to save a DelayedJob timeout error
+
 Changes:
 * Added support for multiple accounts (Thanks to press9 media solutions berlin - press9.de)
+* Added support for batch upload and verifications (Thanks to press9 media solutions berlin - press9.de)
+* Default DelayedJob timeout to 48 hours
